# flowboard-exe

./: README.md
agent/: pyproject.toml
agent/flowboard/: config.py  launcher.py  main.py
agent/flowboard/db/: models.py  session.py
agent/flowboard/routes/: accounts.py  auth.py  boards.py  elevenlabs.py  license.py  llm.py  requests.py  scenarios.py
agent/flowboard/services/: accounts_dispatcher.py  chrome_profile.py  claude_cli.py  elevenlabs.py  ffmpeg.py  flow_browser.py  flow_client.py  license.py  media.py  pipeline_executor.py  scenario_planner.py  ws_server.py
agent/flowboard/services/llm/: cli_utils.py  codex_bootstrap.py  gemini.py  openai.py
agent/flowboard/tools/: demucs_soundfile.py
agent/flowboard/worker/: processor.py
agent/tests/: test_accounts.py  test_auth.py  test_codex_bootstrap.py  test_elevenlabs_routes.py  test_flow_client.py  test_license.py  test_llm_openai_dual_mode.py  test_llm_routes.py  test_scenario_models.py  test_scenario_planner.py
docs/: windows-distribution.md
extension/: background.js  content.js  injected.js  manifest.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  i18n.ts  styles.css
frontend/src/api/: client.ts  github.ts
frontend/src/components/: AccountManagerDialog.tsx  AccountPanel.tsx  AiProviderDialog.tsx  ForcedSetupGate.tsx  LicenseGate.tsx  ScenarioPlannerDialog.tsx  SettingsPanel.tsx  Toolbar.tsx
frontend/src/store/: board.ts  generation.ts  settings.ts
packaging/windows/: build.ps1  demucs.spec  flowboard.spec  update.spec
updater/: flowboard_update.py
(+3 files in other folders)
