[project]
name = "flowboard-agent"
version = "1.2.26"
description = "Flowboard local agent: FastAPI + SQLite + extension bridge"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic>=2.8",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "imageio-ffmpeg>=0.6.0",
    "pywebview>=5.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
build = [
    "pyinstaller>=6.0",
    "pyarmor>=8.0",
    "demucs>=4.0.1",
    "soundfile>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowboard"]

[tool.ruff]
line-length = 100
target-version = "py310"
